--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "type": "module",
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mysql2": "^3.11.3"
   }
 }
